# video-summarizer-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: config.yml
docs/: 需求-视频总结-v1.md
docs/经验/: GLM视觉模型调用指南.md
src/: __main__.py  config_loader.py  context.py  env_detector.py  interactive.py  main.py  pipeline.py
src/stages/: AGENTS.md  asr.py  audio_extractor.py  keyframe.py  summarizer.py  visual.py
src/utils/: AGENTS.md  ffmpeg.py  image_hash.py  logger.py  zhipu_client.py
tests/: test_config_loader.py  test_env_detector.py  test_interactive.py  test_pipeline.py
tests/stages/: test_asr.py  test_audio_extractor.py  test_keyframe.py  test_summarizer.py  test_visual.py
tests/utils/: test_ffmpeg.py  test_image_hash.py  test_logger.py  test_zhipu_client.py
